# cemp-dev

./: .gitignore  glue_arch.md  main.py  pyproject.toml
data-generator/: generate_khols_nps.py
data/vendor=khols/dataset=nps/: 5_rows_fun.json  MOCK_DATA.json  example.json
dbt/cemp/: dbt_project.yml  rsa_key.pub
dbt/cemp/models/gold/: daily_promoter_score.sql  schema.yml
dbt/cemp/models/silver/: promoter_score.sql  schema.yml
flyway/migrations/: V1__control_plane.sql
glue/: main.py  registry.py
migrations/: V1.1.0__raw_storage_integration.sql  V1.2.0__raw_s3_stage.sql  V1.4.0__iceberg_bronze_nps.sql  V1.5.0__raw_events.sql  V1.7.0__add_region_bronze.sql  V1.7.1__bronze_country_state.sql  V1.7.2__ndjson_ff.sql  V1.7.3__raw_file_version.sql  V1.7.4__rename_ndjson.sql  V1__raw_stage.sql  v1.3.0__glue_catalog_integration.sql  v1.3.1__iceberg_ext_vol.sql  v1.6.0__silver_schema.sql  v1.6.1__nps_tables.sql  v1.8.0__khols_raw.sql  v1.8.1__khols_raw.sql  v1.8.2__khols_parsed.sql  v1.8.3__khols_backfill.sql
terraform/: .terraform.lock.hcl  main.tf
