[project]
name = "cemp-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
airflow = [
    "apache-airflow-providers-snowflake>=6.11.0",
    "snowflake-connector-python>=4.3.0",
]
dev = [
    "apache-airflow>=3.1.8",
    "apache-airflow-providers-amazon>=9.23.0",
]
